objects/agf__ADM_Comment__c.object
<CustomObject>
    <fields>
        <fullName>agf__Body__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Comment_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comment Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Comment_Created_Date__c</fullName>
        <label>Comment Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Is_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__LocaleCreatedDate__c</fullName>
        <label>LocaleCreatedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Posted_to_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field tracks if the comment has been posted to chatter. This field is used to tell if we need to display legacy comments, for more info see dependent story: W-1756310</description>
        <label>Posted to Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Preserve_Formatting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to decide if we are going to surround our comment body with a &quot;PRE&quot; tag</description>
        <label>Preserve Formatting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Priority_Override_Explanation__c</fullName>
        <description>Used to store what the reason for a priority override was</description>
        <label>Priority Override Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Subject__c</fullName>
        <formula>agf__Work__r.agf__Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Comment</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Story Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Body_is_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( agf__Body__c )</errorConditionFormula>
        <errorMessage>The comment body cannot be blank!</errorMessage>
    </validationRules>
</CustomObject>